examples/negative/modules/duplicate_effect_decl.kai
# Negative fixture (#543 / modules): two `effect` declarations with
# the same name `Logger` appear in the same module. The resolver
# rejects with "already declared", matching the `type` and `fn`
# cases covered by `duplicate_type_decl.kai` and
# `duplicate_fn_decl.kai`. `register_one` previously prepended the
# second effect into the env blindly so it silently shadowed the
# first.

effect Logger {
  log(msg: String) : Unit
}

effect Logger {
  warn(msg: String) : Unit
}

fn main() : Int = 0
